external-dns/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  template:
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns
          args:
            - --policy=sync
            - --source=gateway-httproute
            - --source=gateway-grpcroute
            - --source=service
            - --source=ingress
            - --registry=txt
            - --txt-prefix=_owner.
            - --txt-owner-id=digitalocean-hashbang
            - --provider=aws
          ports:
            - name: http
              containerPort: 7979
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 2
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes and AWS token files
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
---
apiVersion: v1
kind: Service
metadata:
  name: external-dns
spec:
  ports:
  - name: http
    port: 7979
    targetPort: http
