external-dns/networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: external-dns
spec:
  endpointSelector:
    matchLabels:
      k8s:app: external-dns
  ingress:
  - fromEntities:
    - cluster
    # TODO: I can't get fromEndpoints to work
    toPorts:
    - ports:
      - port: "7979"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/metrics"

  egress:
  # Need to be able to talk to api server
  - toEndpoints:
    - matchLabels:
       "k8s:io.kubernetes.pod.namespace": kube-system
  # Allow (limited) DNS queries
  - toEndpoints:
    - matchLabels:
       "k8s:io.kubernetes.pod.namespace": kube-system
       "k8s:k8s-app": kube-dns
    toPorts:
      - ports:
         - port: "53"
           protocol: ANY
        rules:
          dns:
            - matchPattern: "*.amazonaws.com"
  # Allow HTTP connections to AWS services
  - toFQDNs:
    - matchPattern: "*.amazonaws.com"
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
